@@ -14,4 +14,18 @@
       (setfield_ptr(root-init) 1 (global Anonymous!) B)
       (let (f = (function param 0a))
         (setfield_ptr(root-init) 2 (global Anonymous!) f))
+      (let (s = (makemutable 0 ""))
+        (setfield_ptr(root-init) 3 (global Anonymous!) s))
+      (ignore
+        (let
+          (*match* =
+             (setfield_ptr 0 (field 3 (global Anonymous!)) "Hello World!"))
+          (makeblock 0)))
+      (let (drop = (function param 0a))
+        (setfield_ptr(root-init) 4 (global Anonymous!) drop))
+      (let
+        (*match* =
+           (apply (field 4 (global Anonymous!))
+             (field 0 (field 3 (global Anonymous!)))))
+        0a)
       0a)))
